--- a/navbar.html
+++ b/navbar.html
@@ -47,7 +47,7 @@
 
     function destinationFunc(page) {
 
-               return "https://akshay2395.github.io/ImpromptuTravelogue/" + page ;
+               return "https://akshay2395.github.io/ImpromptuTravelogue/destinations/" + page ;
 
            }
 
