--- a/navbar.html
+++ b/navbar.html
@@ -18,7 +18,7 @@
                  <span class="glyphicon glyphicon-align-justify"></span>                
              </button>
             
-<a class="navbar-brand" href="index.html" id="websiteName">Impromptu Travelogue</a>
+<a class="navbar-brand" href="https://akshay2395.github.io/ImpromptuTravelogue/" id="websiteName">Impromptu Travelogue</a>
         </div>
     
         <div class="collapse navbar-collapse" id="myNavbar">
